--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^7.0.1",
     "firebase": "^11.6.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
